--- a/templates/etc/systemd/docker.service.erb
+++ b/templates/etc/systemd/docker.service.erb
@@ -4,7 +4,7 @@ Documentation=http://docs.docker.io
 After=network.target
 
 [Service]
-ExecStart=/usr/bin/docker -d 
+ExecStart=/usr/bin/docker -d -r=false
 Restart=on-failure
 LimitNOFILE=1048576
 LimitNPROC=1048576
